[gd_scene load_steps=5 format=2]

[ext_resource path="res://addons/GameTemplate/Assets/Fonts/pixellocale_32.tres" type="DynamicFont" id=1]
[ext_resource path="res://addons/GameTemplate/Assets/Fonts/pixellocale_64.tres" type="DynamicFont" id=2]
[ext_resource path="res://addons/GameTemplate/Assets/Fonts/pixellocale_16.tres" type="DynamicFont" id=3]
[ext_resource path="res://MainMenu/Lobby.gd" type="Script" id=4]

[node name="Lobby" type="CanvasLayer"]
script = ExtResource( 4 )

[node name="Panel" type="Panel" parent="."]
margin_right = 1024.0
margin_bottom = 600.0

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
margin_right = 1024.0
margin_bottom = 600.0

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer"]
margin_right = 1024.0
margin_bottom = 600.0
alignment = 1

[node name="Label" type="Label" parent="Panel/MarginContainer/VBoxContainer"]
margin_top = 169.0
margin_right = 1024.0
margin_bottom = 305.0
custom_fonts/font = ExtResource( 2 )
text = "Lobby"
align = 1
valign = 3
uppercase = true

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/MarginContainer/VBoxContainer"]
margin_top = 309.0
margin_right = 1024.0
margin_bottom = 387.0
alignment = 1

[node name="Label" type="Label" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 335.0
margin_top = 5.0
margin_right = 531.0
margin_bottom = 73.0
custom_fonts/font = ExtResource( 1 )
text = "Your Name"

[node name="LineEdit" type="LineEdit" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 535.0
margin_right = 689.0
margin_bottom = 78.0
custom_fonts/font = ExtResource( 1 )
align = 3

[node name="HBoxContainer2" type="HBoxContainer" parent="Panel/MarginContainer/VBoxContainer"]
margin_top = 391.0
margin_right = 1024.0
margin_bottom = 431.0
alignment = 1

[node name="CreateButton" type="Button" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer2"]
margin_left = 452.0
margin_right = 512.0
margin_bottom = 40.0
custom_fonts/font = ExtResource( 3 )
text = "Host"

[node name="JoinButton" type="Button" parent="Panel/MarginContainer/VBoxContainer/HBoxContainer2"]
margin_left = 516.0
margin_right = 572.0
margin_bottom = 40.0
custom_fonts/font = ExtResource( 3 )
text = "Join"

[connection signal="text_changed" from="Panel/MarginContainer/VBoxContainer/HBoxContainer/LineEdit" to="." method="_on_LineEdit_text_changed"]
[connection signal="pressed" from="Panel/MarginContainer/VBoxContainer/HBoxContainer2/CreateButton" to="." method="_on_CreateButton_pressed"]
[connection signal="pressed" from="Panel/MarginContainer/VBoxContainer/HBoxContainer2/JoinButton" to="." method="_on_JoinButton_pressed"]
